--- a/connection_settings.json
+++ b/connection_settings.json
@@ -2,5 +2,5 @@
   "auth":"true",
   "port":"465",
   "socketFactory":"465",
-  "accountFullName":"e.aysin@shelter.ru",
-  "password":"KernelLib20!"}
+  "accountFullName":"",
+  "password":""}
